[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Medchest.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MedChest.gd" type="Script" id=2]

[sub_resource type="OccluderPolygon2D" id=2]
cull_mode = 2
polygon = PoolVector2Array( -20, -10, -20, 0, -35, 0, -35, 50, 35, 50, 35, 0, 20, 0, 20, -10 )

[node name="MedChest" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20, -10, -20, 0, -35, 0, -35, 50, 35, 50, 35, 0, 20, 0, 20, -10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Medchest_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_MedChest_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MedChest_mouse_exited"]
